# PhotoShare-by-Rapid-Creators

./:  README.md  .env.example  .gitignore  README.md  blacklist_db.txt  docker-compose.yml  main.py  middlewares.py  pyproject.toml  requirements.txt
docs/: conf.py  index.html
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_static/: bizstyle.js
migrations/: env.py
migrations/versions/: 0878b912f944_init.py  2d256597dc85_init.py  43e19a67f667_init.py  59bf7327f049_init.py  5b4a0a364e09_init.py  700e4afd5709_init.py  8593ba0dbb7d_init.py
src/config/: config.py
src/database/: db.py  models.py
src/repository/: comments.py  images.py  rating.py  users.py
src/routes/: admin.py  auth.py  comments.py  contacts.py  images.py  rating.py  users.py
src/schemas/: comments.py  images.py  rating.py  schemas.py  users.py
src/services/: auth.py  email.py  roles.py  tags.py
src/services/static/: style.css
src/services/templates/: email_verification.html  index.html  password_reset_email.html
src/templates/: index.html
