[tool.poetry]
name = "photoshare-by-rapid-creators"
version = "0.1.0"
description = ""
authors = ["Olga Mageria <olgamageria@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.7.1"}
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
libgravatar = "^1.0.4"
passlib = "^1.7.4"
bcrypt = "4.0.1"
fastapi-mail = "^1.4.1"
fastapi-limiter = "^0.1.6"
python-dotenv = "^1.0.1"
cloudinary = "^1.40.0"
pydantic-settings = "^2.2.1"
qrcode = "^7.4.2"
sphinx = "^7.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
